--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -30,7 +30,7 @@
 
 <div class="main-new">
             <ul class="verticle-menu">
-             <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
+              <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
               <li><%= link_to "Change Password", edit_user_registration_path %></li>
               <li><%= link_to "Bank Details",bank_details_path %></li>
               <li><%= link_to "My Post",posts_path%></li>
@@ -55,7 +55,7 @@
                     
                     </ul>
                     <div class="search">
-                    <%= submit_tag "Submit"%>
+                    <%= image_submit_tag("search_new.png")%>
                     <!-- <a href=""><img src="/assets/search_new.png"></a> -->
                     </div>
                     <%end%> 
@@ -90,15 +90,18 @@
                         <span>Drop-off date</span> : <%= booking.dropoff_date.strftime("%B %m,%Y") %> 
                         <p>
                         <span>Booked drop-off</span> 
-                        <label class="tasks-list-item">
                         <% if booking.dropoff_price != 0 %>
-                           <input id="false" type="checkbox" value="1" name="false" disabled="disabled" checked>
-                        <%else%>
-                          <input id="false" type="checkbox" value="1" name="false" disabled="disabled">
+                          <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
+                            <span class="tasks-list-mark"></span>
+                          </label>
+                            $<%= booking.pickup_price %>
+                          <%else%>
+                            <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled">
+                            <span class="tasks-list-mark"></span>
+                            </label>
                         <%end%>
-                        <span class="tasks-list-mark"></span>
-                        <!--<span class="tasks-list-desc">Left Label</span>-->
-                        </label>
                         </p>
                         <p>
                         <a href="#" class="booking-btn">Confirm drop-off</a>
@@ -113,19 +116,22 @@
                         <p>
 
                         <span>Booked pick-up</span>
-                        <label class="tasks-list-item">
                         <% if booking.pickup_price != 0 %>
-                        
-                          <input id="false" type="checkbox" value="1" name="false" disabled="disabled" checked >
-                        <%else%>
-                          <input id="false" type="checkbox" value="1" name="false" disabled="disabled">
+                          <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
+                            <span class="tasks-list-mark"></span>
+                          </label>
+                            $<%= booking.pickup_price %>
+                          <%else%>
+                          <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled">
+                            <span class="tasks-list-mark"></span>
+                          </label>
                         <%end%>
-                        <span class="tasks-list-mark"></span>
-                          <p class="vmp">
-                           <%= link_to "View My Post", booking_path(booking.id) %>
-                          </p>
                         <!--<span class="tasks-list-desc">Left Label</span>-->
-                        </label>
+                        <p class="vmp"> 
+                          <%= link_to "View Post", booking_path(booking.id) %>
+                        </p>
                         </p>
                         </div>
                         
