--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -31,11 +31,43 @@
               <% end %>
             </div>
                 
-            <div id="menu">
-               <a href="javascript:void(0);"> <img src="/assets/menu.png" style="width:94px;">
-               </a>
-                <p style="margin:-56px 0 0 455px;">  <img src="/assets/logo.png"; style="width:120px;"></p>
+            <div class="menu">
+
+                <a href="javascript:void(0);"><img src="/assets/logo.png" class="logo"></a>
+
+                 <div class="dropdown">
+                     <a class="account"></a>
+                     <% if user_signed_in? %>
+                      <div class="submenu" style="display: none; ">
+                        
+                          
+                            <div class="main-new2">
+                                <ul>
+                                    <li>
+                                        <%= link_to "List your place", posts_overview_path %>
+                                    </li>
+                                    <li>
+                                        <%= link_to "Browse Spaces", posts_overview_path %>
+                                    </li>
+                                    <li>
+                                     <%= link_to("Message" + "<span>2</span>".html_safe, {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post}) %> 
+                                    </li>
+                                    <li class="active">
+                                      <%= link_to "My Account", edit_user_path(current_user) %>
+                                    </li>
+                                    <li>
+                                      <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
+                                    </li>
+                                   <li><a href="javascript:void(0);">Support</a></li>
+                                   <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                                </ul>
+                            </div>
+
+                      </div>
+                     <% end %>
+                  </div>
             </div>
+
             <div class="clear"> </div>  
 
               <%= yield %>
@@ -45,8 +77,8 @@
             <p style= "float:right;margin:30px 60px 0px -150px;"><a href="javascript:void(0);"><img src="/assets/facebook_icon.png"></a> </p>
             <div class="right" style="width:191px;float:left;"> <!--------9/12/14---------------->
                 <ul>
-                <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"}%></li>
-                <li><%= link_to "FAQ",faq_path%></li>
+                <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"} %></li>
+                <li><%= link_to "FAQ",frequently_asked_question_path%></li>
                  
                 <li><%= link_to 'Contact us', home_contactus_path %> </li></ul><br>
             </div>
@@ -97,17 +129,60 @@ document.getElementById('bt2').addEventListener('click',function(e){
 
 <!-- -------------------------down arrow------------------------------------------------ -->
   
-  <script>
   
-  jQuery('a').click(function(){
+
+
+  <script type="text/javascript" >
+  $(document).ready(function()
+  {
+      $(".account").click(function()
+      {
+        var X=$(this).attr('id');
+
+        if(X==1)
+        {
+          $(".submenu").hide();
+          $(this).attr('id', '0');  
+        }
+        else
+        {
+          $(".submenu").show();
+          $(this).attr('id', '1');
+        }
+        
+      });
+
+      //Mouseup textarea false
+      $(".submenu").mouseup(function()
+      {
+        return false
+      });
+
+      $(".account").mouseup(function()
+      {
+        return false
+      });
+
+
+    //Textarea without editing.
+    $(document).mouseup(function()
+    {
+      $(".submenu").hide();
+      $(".account").attr('id', '');
+    });
+      
+  });
+
+
+   jQuery('#myAnchor').click(function(){
     jQuery('html, body').animate({
         scrollTop: jQuery( jQuery(this).attr('href') ).offset().top
     }, 500);
     return false;
-});
-  
+  });
   
   </script>
+
   
   
                
