--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,135 +1,259 @@
+<%= javascript_include_tag "jquery.ui.core", "jquery.ui.datepicker.js" %>
+<%= stylesheet_link_tag   "jquery.ui.core", "jquery.ui.theme", "jquery.ui.datepicker"%>
 
 
-  <script type="text/javascript">
+<script type="text/javascript">
 
-    jQuery(function($){
-      $("#post_pick_up_avaibilty_start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/calendar.gif', buttonImageOnly: true})
+  jQuery(function($){
+    $("#post_pick_up_avaibilty_start_date").datepicker({dateFormat: 'M d,yy',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
 
-    });
-    jQuery(function($){
-      $("#post_pick_up_avaibility_end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/calendar.gif', buttonImageOnly: true})
-    });
-    jQuery(function($){
-      $("#post_drop_off_avaibility_start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/calendar.gif', buttonImageOnly: true})
-    });
-    jQuery(function($){
-      $("#post_drop_off_avaibility_end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/calendar.gif', buttonImageOnly: true})
-    });
+  });
+  jQuery(function($){
+    $("#post_pick_up_avaibility_end_date").datepicker({dateFormat: 'M d,yy',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
+  });
+  jQuery(function($){
+    $("#post_drop_off_avaibility_start_date").datepicker({dateFormat: 'M d,yy',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
+  });
+  jQuery(function($){
+    $("#post_drop_off_avaibility_end_date").datepicker({dateFormat: 'M d,yy',changeMonth: false,changeYear: false, minDate: 0, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
+  });
     
-    $(document).ready(function(){
-        $('input[type="checkbox"]').click(function(){
-            if($(this).attr("id")=="post_pick_up"){
-                $(".post_pick_up").toggle();
-            }
-            if($(this).attr("id")=="post_drop_off"){
-                $(".post_drop_off").toggle();
-            }
+  $(document).ready(function(){
+      $('input[type="checkbox"]').click(function(){
+          if($(this).attr("id")=="post_pick_up"){
+              $(".post_pick_up").toggle();
+          }
+          if($(this).attr("id")=="post_drop_off"){
+              $(".post_drop_off").toggle();
+          }
+          
+      });
+  });
+</script>
+
+<script type="text/javascript">
+$(document).ready(function() {
+// Tooltip only Text
+$('.masterTooltip').hover(function(){
+        // Hover over code
+        var title = $(this).attr('title');
+        $(this).data('tipText', title).removeAttr('title');
+        $('<p class="tooltip"></p>')
+        .text(title)
+        .appendTo('body')
+        .fadeIn('slow');
+}, function() {
+        // Hover out code
+        $(this).attr('title', $(this).data('tipText'));
+        $('.tooltip').remove();
+}).mousemove(function(e) {
+        var mousex = e.pageX + 20; //Get X coordinates
+        var mousey = e.pageY + 10; //Get Y coordinates
+        $('.tooltip')
+        .css({ top: mousey, left: mousex })
+});
+});
+</script>
+             
+    <div class="main-new">
+            <ul class="verticle-menu">
+              <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
+              <li><%= link_to "Change Password", edit_user_registration_path %></li>
+              <li><%= link_to "Bank Details",bank_details_path %></li>
+              <li class="active"><%= link_to "My Post",posts_path%></li>
+              <li><%= link_to "My Order/Received",order_receives_path%></li>
+              <li><%= link_to "My Booking", bookings_path%></li>
+              <li><%= link_to "Payment", nil%></li>
+              <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
+            </ul>
             
-        });
-    });
+            <div class="right-side">
+              <%= form_for(@post, :html=>{ id: "new_post"}) do |f| %>
+                <% if @post.errors.any? %>
+                  <div id="error_explanation">
+                    <ul>
+                    <% @post.errors.full_messages.each do |message| %>
+                      <li><%= message %></li>
+                    <% end %>
+                    </ul>
+                  </div>
+                <% end %>
+                    <div class="post-bg">
+                      <div class="post-bg-left">
+                            <div class="post-bg-row">
+                              <div class="post-bg-row-col1">
+                                <span class="font13">Area available
+                                <span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                                </span>
+                                <p>
+                                How to estimate :</br>
+                4 feet x 5 feet = 20 sq. feet
+                                </p>
+                              </div>
+                                
+                                <div class="post-bg-row-col2 right-align">
+                                <%= f.text_field :area , :class=>"post-bg-input"%>
+                                <p>
+                                sq. ft.
+                                </p>
+                              </div>
+                            </div>
+                            
+                            
+                            <div class="post-bg-row">
+                              <div class="post-bg-row-col3" >
+                                When can they drop off goods at your place ?<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                                <ul class="post-date">
+                                  <li><label>From</label>
+                                    <%= f.text_field :drop_off_avaibility_start_date%>
+                                  </li>
 
-  </script>
+                                  <li><label>To</label>
+                                    <%= f.text_field :drop_off_avaibility_end_date%>
+                                  </li>
+                                </ul>
+                              </div> 
+                                
+                                
+                                
+                                
+                            </div>  
+                            
+                            <div class="post-bg-row">
+                              <div class="post-bg-row-col3">
+                                Can you help transport the stuff in your car ?<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                                <ul class="check-box">
+                            <li>
+                                <label class="tasks-list-item">
+                                <input type="checkbox" id="post_drop_off" name="post[drop_off]" value="1" class="tasks-list-cb">
+                                <%#= f.check_box :drop_off, :class => "tasks-list-cb" %>
+                                <span class="tasks-list-mark"></span>
+                                <span class="tasks-list-desc">Drop-off</span>
+                                </label>
+                            </li>
+                                
+                            <li>
+                                <label class="tasks-list-item">
+                                <input type="checkbox" id="post_pick_up" name="post[pick_up]" value="1" class="tasks-list-cb">
+                                <%#= f.check_box :pick_up, :class => "tasks-list-cb" %>
+                                <span class="tasks-list-mark"></span>
+                                <span class="tasks-list-desc">Pick-up</span>
+                                </label>
+                            </li>
+                                
+                                </ul>
+                              </div> 
+                                
+                                <div class="post-bg-row-col4">
+                                <ul class="post-date post-price">
 
-
-
-  
-
-<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
-
-<%= form_for(@post, :html=>{ id: "new_post"}) do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :area %>
-    <%= f.text_field :area %>
-  </div>
-
-  <div class="field">
-    <%= f.label :price_sq_ft, "Price per square feet" %>
-    <%= f.text_field :price_sq_ft %>
-
-  </div>
-
-  <div class="field">
-     <%= f.check_box :drop_off %> Drop Off  <%= f.check_box :pick_up %> Pick Up <br/><br/>
-  </div>
-
-  <div class="field post_pick_up" <% if @post.pick_up == true %> <% else %> style="display: none;" <% end %>>
-    <%= f.label :price_include_pick_up, "Pick up Price"%>
-    <%= f.text_field :price_include_pick_up %>
-  </div>
-
-  <div class="field post_drop_off" <% if @post.drop_off == true %> <% else %> style="display: none;" <% end %>>
-    <%= f.label :price_include_drop_off, "Drop off Price" %>
-    <%= f.text_field :price_include_drop_off %>
-  </div>
-
-
-  <div class="field">
-   
-       <%= f.label :drop_off_avaibility_start_date %>
-       <%= f.text_field :drop_off_avaibility_start_date%>
-      
-
-  </div>
-
-  <div class="field">
+                                <li <% if @post.drop_off == true %> <% else %>  <% end %> ><label>Price</label><span>$</span>
+                                  <%= f.text_field :price_include_drop_off,:style=>"text-align: right;" %>
+                                </li>
+                                <li <% if @post.pick_up == true %> <% else %>  <% end %>><label>Price</label><span>$</span>
+                                  <%= f.text_field :price_include_pick_up,:style=>"text-align: right;" %>
+                                </li>
+                                </ul>
+                              </div>
+                                
+                                
+                            </div>
+                            
+                            
+                            
+                            <div class="post-bg-row">
+                            <ul class="field-list">
+                            <li><label>Address</label> 
+                              <%= f.text_field :address, :class => "small" %>
+                            </li>
+                            <li><label>Street address</label> 
+                              <%= f.text_field :street_add, :class => "small" %>
+                            </li>
+                            <li class="small"><label>Apt # <span style="color:#78838e; font-size:10px">Optional</span></label> 
+                              <%= f.text_field :apt, :class => "small" %>
+                            </li>
+                            <li><label>City</label> 
+                              <%= f.text_field :city, :class => "small" %>
+                            </li>
+                            <li class="small"><label>State</label> 
+                              <%= f.text_field :state, :class => "small" %>
+                            </li>
+                            <li class="small"><label>Zip code</label> 
+                              <%= f.text_field :zip_code, :class => "small" %>
+                            </li>
+                            </ul>
+                            </div>
+                            
+                            
+                        </div>
+                      <div class="post-bg-right">
+                            <div class="post-bg-row">
+                              <div class="post-bg-row-col1">
+                                <span class="font13">Price per sq. foot<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                                <p>
+                                This is the price the renters will see.
+                                A small commission will be deducted 
+                                before the money is sent to you. <a href="#" style="color:#b0b9c0">Learn more</a>
+                                </p>
+                              </div>
+                                
+                                <div class="post-bg-row-col2 right-align">
+                                <%= f.text_field :price_sq_ft,:class=>"post-bg-input" %>
+                                <p>
+                                sq. ft.
+                                </p>
+                              </div>
+                            </div>
+                            
+                            <div class="post-bg-row" style="margin-bottom:18px; margin-top: -10px;">
+                              <div class="post-bg-row-col3">
+                               When can they pick up the goods ?<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                                <ul class="post-date">
+                                <li><label>From</label><%= f.text_field :pick_up_avaibilty_start_date%></li>
+                                <li><label>To</label><%= f.text_field :pick_up_avaibility_end_date%></li>
+                                </ul>
+                              </div> 
+                            </div>
+                            
+                            <div class="post-bg-row rel" style="margin-bottom:30px">
+                              <span class="file-input btn-file">
+                                Upload Photo <%= f.file_field :photo %>
+                              </span>
+                                
+                                <div class="photo">
+                                  <% if @post.photo.exists? %>
+                                    <%= image_tag @post.photo.url(:thumb) %>
+                                  <% end %>
+                                  <!-- <a href="#">Delete</a> -->
+                                </div>
+                            </div>
+                            
+                            <%= f.hidden_field :user_id, :value=> current_user.id %>
+                            <div class="post-bg-row">
+                              
+                               Comments<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                                <p>
+                                <%= f.text_area :additional_comments,:rows => "5", :class => "comment-area" , :placeholder => "Apartment will be accessible all summer"%>
+                                </p>
+                                <p>
+                                <%= f.submit "Submit",:class=>"submit-btn" %>&nbsp;&nbsp;&nbsp;&nbsp;
+                                
+                                </p>
+                            
+                            </div>
+                               <% if @post.id %>
+                                  <% if @post.status == true %>
+                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Deactive Post', toggle_post_path(@post.id), :class=>"booking-btn" %>
+                                  <% else %>
+                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Activate Post', toggle_post_path(@post.id), :class=>"booking-btn" %>
+                                  <% end %>
+                                  &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(@post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"booking-btn" %> 
+                                <% end %>
+                            
+                        </div>
+                 
+              <%end%>   </div>   
+           </div>
+        </div>
  
-      <%= f.label :drop_off_avaibility_end_date %>
-      <%= f.text_field :drop_off_avaibility_end_date%>
-
-  </div>
-
-  <div class="field">
-   
-      <%= f.label :pick_up_avaibilty_start_date %>
-      <%= f.text_field :pick_up_avaibilty_start_date%>
-
-      <%= f.label :pick_up_avaibility_end_date %>
-      <%= f.text_field :pick_up_avaibility_end_date%>
-
-  </div>
-
-   <div class="field">
-    <%= f.label :additional_comments %>
-    <%= f.text_area :additional_comments %>
-    <%= f.hidden_field :user_id, :value=> current_user.id %>
-  </div>
  
-  <div class="field">
-      <%= f.label :photo, "Photo" %>
-       <% if @post.photo.exists? %>
-       <%= image_tag @post.photo.url(:thumb) %>
-       <% end %>
-      <%= f.file_field:photo %><br><br>
-  </div>
-   <div class="field">
-    <%= f.label :address %>
-    <%= f.text_area :address %>
-    
-  </div>
-
-  
-
-  <div class="actions">
-    <%= f.submit :class=>"btn btn-primary" %>
-
-    <% if @post.id %>
-      <% if @post.status == true %>
-      &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Deactive Post', toggle_post_path(@post.id), :class=>"btn btn-primary" %>
-      <% else %>
-      &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Activate Post', toggle_post_path(@post.id), :class=>"btn btn-primary" %>
-      <% end %>
-      &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(@post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"btn btn-primary" %>
-      
-    <% end %>
-  </div>
-<% end %>
