--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,117 @@
-<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+   
 
-<%= form_for @user, :url => user_path(@user), html: { method: :put, id: "edit_user" } do |f|%>
-  <div><%= f.label :email %>
-    <%= f.email_field :email, :readonly => true %></div>
+  <%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+<!-- 
+  <%= form_for @user, :url => user_path(@user), html: { method: :put, id: "edit_user" } do |f|%>
+    <div><%= f.label :email %>
+      <%= f.email_field :email, :readonly => true %></div>
 
-  <div><%= f.label :name, "First Name" %>
-    <%= f.text_field :name %> </div>
- 
-  <div><%= f.label :last_name %>
-    <%= f.text_field :last_name %> </div>
+    <div><%= f.label :name, "First Name" %>
+      <%= f.text_field :name %> </div>
+   
+    <div><%= f.label :last_name %>
+      <%= f.text_field :last_name %> </div>
 
-  <div><%= f.label :personal_email %>
-    <%= f.text_field :personal_email %> </div>
+    <div><%= f.label :personal_email %>
+      <%= f.text_field :personal_email %> </div>
 
-  <div> <%= f.label :mobile_number %>
-    <%= f.text_field :mobile_number, placeholder:"xxx xxx-xxxx" %> </div>
-  
-  <div><%= f.submit "Update", :class=>"btn btn-primary" %></div>
-<% end %>
+    <div> <%= f.label :mobile_number %>
+      <%= f.text_field :mobile_number, placeholder:"xxx xxx-xxxx" %> </div>
+    
+    <div><%= f.submit "Update", :class=>"btn btn-primary" %></div>
+  <% end %>
+
+ -->
+
+
+<div class="wrapper">
+  <div class="main"> 
+  <div class="main2">
+                <div class="main-new">
+                 <ul class="verticle-menu" style="min-height:600px;">
+                    <li class="active">
+                    <%= link_to "Personal Information", edit_user_path(current_user)%>
+                    </li>
+
+                    <li>
+                    <%= link_to "Change Password", edit_user_registration_path%>
+                    </li>
+
+                    <li>
+                    <%= link_to "Bank Details",bank_details_path %>
+                    </li>
+
+                    <li>
+                    <%= link_to 'My Post', posts_path %>
+                    </li>
+
+                    <li><%= link_to "My Order/Received",order_receives_path%></li>
+                    <li><%= link_to "My Booking", bookings_path%></li>
+                    <li><%= link_to "Payment", payments_path%></li>
+
+                    <li>
+                    <%= link_to "Messages",{:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil%></li>
+                 </ul>
+
+                <div class="new_login3">
+                <div class="f1">
+                  <!-- <form method="post" class="signin" action="#"> -->
+                  <%= form_for @user, :url => user_path(@user), html: { :class=>"signin",method: :put, id: "edit_user" } do |f|%>
+
+                  <fieldset class="textbox">
+                       
+                        <div input id="password">
+                          <%= f.email_field :email, :readonly => true,:style => "font-family: brandon4;", :placeholder=>"Email" %>
+                        </div>
+
+                        <div input id="password">
+                          <%= f.text_field :name,:style => "font-family: brandon4;", :placeholder=> "First Name" %>
+                        </div>
+                       
+                        <div input id="password">
+                          <%= f.text_field :last_name, :style => "font-family: brandon4;",:placeholder=> "Last Name" %>
+                        </div>
+
+                        <div input id="password">
+                          <%= f.text_field :personal_email, :style => "font-family: brandon4;",:placeholder=> "Personal Email" %>
+                        </div>
+
+                        <div input id="password"> 
+                          <%= f.text_field :mobile_number, :style => "font-family: brandon4;",placeholder:"xxx xxx-xxxx"%>
+                        </div> 
+
+                  </fieldset>
+
+                     <div class="pickup4">
+               
+                        <p style="margin: -25px 0px 0px; font-size: 16px; color: rgb(123, 123, 123); margin-top:155px;">Send notifications to:</p>
+                        <input type="checkbox" checked="checked" value="1" name="checkbox" id="checkbox1"><label for="checkbox1">&nbsp;</label>
+                         <p style="margin:-25px  0 0 30px; color:#7b7b7b"><%= current_user.email %></p>
+                         
+                         
+                         <input type="checkbox" checked="checked" value="1" name="checkbox" id="checkbox1"><label style="margin-top:10px;" for="checkbox1">&nbsp;</label>
+                         <p style="margin:-25px  0 0 30px; color:#7b7b7b"><%= current_user.personal_email %></p>
+
+                     </div>
+
+                        <div>
+                              <%= f.submit "Save changes", :class=>"button-new4" %>
+                        </div>
+
+                  <% end %>
+                <!-- </form> -->
+
+                </div>
+
+
+                </div>
+                
+                </div>
+
+
+
+  </div>              
+  </div>
+</div>
+
+
