--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -31,6 +31,8 @@
   });
 </script>
 
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+
 <script type="text/javascript">
 $(document).ready(function() {
 // Tooltip only Text
@@ -164,22 +166,22 @@ $('.masterTooltip').hover(function(){
                             <div class="post-bg-row">
                             <ul class="field-list">
                             <li><label>Address</label> 
-                              <%= f.text_field :address, :class => "small" %>
+                              <%= f.text_field :address,"maxlength"=>"40", :class => "small" %>
                             </li>
                             <li><label>Street address</label> 
-                              <%= f.text_field :street_add, :class => "small" %>
+                              <%= f.text_field :street_add,"maxlength"=>"30", :class => "small" %>
                             </li>
                             <li class="small"><label>Apt # <span style="color:#78838e; font-size:10px">Optional</span></label> 
-                              <%= f.text_field :apt, :class => "small" %>
+                              <%= f.text_field :apt,"maxlength"=>"10", :class => "small" %>
                             </li>
                             <li><label>City</label> 
-                              <%= f.text_field :city, :class => "small" %>
+                              <%= f.text_field :city, "maxlength"=>"20",:class => "small" %>
                             </li>
                             <li class="small"><label>State</label> 
-                              <%= f.text_field :state, :class => "small" %>
+                              <%= f.text_field :state, "maxlength"=>"2",:class => "small" %>
                             </li>
                             <li class="small"><label>Zip code</label> 
-                              <%= f.text_field :zip_code, :class => "small" %>
+                              <%= f.text_field :zip_code, "maxlength"=>"5",:class => "small" %>
                             </li>
                             </ul>
                             </div>
@@ -233,7 +235,7 @@ $('.masterTooltip').hover(function(){
                               
                                Comments<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
                                 <p>
-                                <%= f.text_area :additional_comments,:rows => "5", :class => "comment-area" , :placeholder => "Apartment will be accessible all summer"%>
+                                <%= f.text_area :additional_comments,:rows => "5", :class => "comment-area" , "maxlength"=>"300",:placeholder => "Apartment will be accessible all summer"%>
                                 </p>
                                 <p>
                                 <%= f.submit "Submit",:class=>"submit-btn" %>&nbsp;&nbsp;&nbsp;&nbsp;
