--- a/app/views/bookings/cancel_popup.html.erb
+++ b/app/views/bookings/cancel_popup.html.erb
@@ -18,6 +18,7 @@ background:#FFF;
 	margin-left:171px;
 	margin-top:30px;
 	border:2px #00b4ff solid;
+	cursor:pointer;
 		}
 .booking-btn a{
 text-decoration:none;
@@ -113,9 +114,7 @@ font-family: brandon4;
 		      <%= link_to "Cancel Booking", cancel_booking_bookings_path(:drop_off_date =>params[:drop_off_date],:id =>params[:id])%>
 		    </div>
 		<% end %>
-		<div class="cancel-btn">
-	      <a href="#">Cancel</a>
-	    </div>
+		
 	</div>
 </div>
 
