--- a/app/views/bookings/drop_off.html.erb
+++ b/app/views/bookings/drop_off.html.erb
@@ -18,6 +18,7 @@ background:#FFF;
 	margin-left:162px;
 	margin-top:30px;
 	border:2px #00b4ff solid;
+	cursor:pointer;
 		}
 .booking-btn a{
 text-decoration:none;
@@ -107,11 +108,10 @@ font-family: brandon4;
 		    </div>
 		<%else%>    
 		    <div class="alredy-btn">
-		     <%= link_to "Already confirmed", nil %> 
+		     	
+		     	<%= link_to "Already confirmed", "javascript:void(0)" %>
 		    </div> 
 		<% end %>
-		<div class="cancel-btn">
-	      <a href="#">Cancel</a>
-	    </div>
+		
 	</div>
 </div>
