--- a/app/views/messages/compose_message.html.erb
+++ b/app/views/messages/compose_message.html.erb
@@ -21,6 +21,7 @@ background:#FFF;
   margin-top:30px;
   border:2px #00b4ff solid;
   color:#ffffff;
+  cursor: pointer;
   
     }
 .booking-btn a{
@@ -81,7 +82,7 @@ font-family: brandon4;
     background: none repeat scroll 0 0 #fff;
     border-radius: 4px;
     display: table;
-    height: 421px;
+    height: 400px;
     padding: 10px;
     width: 100%;
 }   
@@ -104,7 +105,7 @@ font-family: brandon4;
       <% end %>
       <div class="row">
         <%= f.hidden_field :recipient_id,:value =>@user.id %>
-        <%= hidden_field_tag :post_id,params[:post_id] %>
+        <%= f.hidden_field :post_id, :value => params[:post_id] %>
       </div>
      
       <div class="paragraph-new">
@@ -112,8 +113,5 @@ font-family: brandon4;
       </div>
       <%= f.submit "Proceed",:class=>"booking-btn"%>
     <% end %>
-    <div class="cancel-btn">
-      <a href="#">Cancel</a>
-    </div>
   </div>
 </div>
