Post page design integrated

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -104,7 +104,7 @@
                         <%end%>
                         </p>
                         <p>
-                        <a href="#" class="booking-btn">Confirm drop-off</a>
+                        <a href="javascript:void(0);" class="booking-btn">Confirm drop-off</a>
                         </p>
 
                         
