--- a/app/views/order_receives/index.html.erb
+++ b/app/views/order_receives/index.html.erb
@@ -81,7 +81,7 @@
             </p>
         </div>
         <div class="order-col order-col1 order-col1-tmar">
-          <span>Drop-off date</span> : <%= booking.dropoff_date.strftime("%B %d, %Y")%>
+          <span>Drop-off date</span> : <%= booking.dropoff_date.strftime("%B %d,%Y")%>
           <p>
             <span>Booked drop-off</span>
             <% if booking.dropoff_price != 0 %>
@@ -89,7 +89,7 @@
                 <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
                 <span class="tasks-list-mark"></span>
               </label>
-                $<%= booking.pickup_price %>
+                $<%= booking.dropoff_price %>
               <%else%>
                 <label class="tasks-list-item">
                 <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled">
@@ -106,7 +106,7 @@
           </p>
         </div>
         <div class="order-col order-col1 order-col1-tmar">
-          <span>Pick-up date</span>  : <%= booking.pickup_date.strftime("%B %d, %Y")%>
+          <span>Pick-up date</span>  : <%= booking.pickup_date.strftime("%B %d,%Y")%>
 
           <p>
             <span>Booked pick-up</span>
