--- a/app/views/order_receives/index.html.erb
+++ b/app/views/order_receives/index.html.erb
@@ -48,7 +48,8 @@
       <% @bookings.each_with_index do |booking, index|%>
       <div class="order-box">
         <div class="order-col order-col1">
-          <div class="heading">
+          <!-- <div class="heading"> -->
+          <div  style="color: #14263a; font-family: brandon4; margin-top: 0;">
             <h4><%= User.find(booking.user_id).name %></h4>
           </div>
           <p>
@@ -129,7 +130,7 @@
           </p>
         </div>
       </div>
+      <%end%>
     </div>
-    <%end%>
   </div>
 </div>
