--- a/app/views/order_receives/index.html.erb
+++ b/app/views/order_receives/index.html.erb
@@ -26,6 +26,19 @@
   </ul>
             
   <div class="right-side">
+
+     <!-- Error Message -->
+                      <% flash.each do |name, msg| %>
+                        <% if msg.is_a?(String) %>
+                          <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+                            <a class="close" data-dismiss="alert">&#215;</a>
+                            <%= content_tag :div, msg, :id => "flash_#{name}" %>
+                          </div>
+                        <% end %>
+                      <% end %>
+                      <!-- End -->
+
+                      
     <div class="blue-header">
       <%= form_tag search_order_received_by_date_path,:method => 'get' do %>
       <ul class="date">
@@ -78,7 +91,8 @@
               <%end%>
             </p>
             <p>
-              <a href="#">Cancel booking</a>
+              
+              <%= link_to "Cancel Booking", cancel_popup_order_receives_path(:id =>booking.id), :remote=> true %>
             </p>
         </div>
         <div class="order-col order-col1 order-col1-tmar">
